Web - Fix segment overflow.

--- a/GPS-Tracking-Orange-Web/app/assets/stylesheets/trips.scss
+++ b/GPS-Tracking-Orange-Web/app/assets/stylesheets/trips.scss
@@ -15,6 +15,7 @@
  	margin: 8px;
  	padding: 10px;
  	border-radius: 8px;
+ 	height: 470px;
  }
  .segment-drop-active{
  	background: #707070;
@@ -25,5 +26,6 @@
  	color: #555555;
  }
  #accordion{
+ 	height: 350px;
  	overflow: auto;
  }
